<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            tools:context=".MainActivity">

        <ImageView
                android:id="@+id/icon_cost_of_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/cost_of_service"
                app:layout_constraintTop_toTopOf="@id/cost_of_service"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/ic_store"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cost_of_service"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:hint="@string/cost_of_service"
                app:layout_constraintStart_toEndOf="@id/icon_cost_of_service"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="16dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cost_of_service_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>
        <ImageView
                android:id="@+id/icon_service_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/service_question"
                app:layout_constraintTop_toTopOf="@id/service_question"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/ic_service"/>
        <TextView
                android:id="@+id/service_question"
                style="@style/Widget.TipTime.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_question"
                app:layout_constraintStart_toEndOf="@id/icon_service_question"
                app:layout_constraintTop_toBottomOf="@id/cost_of_service"
                android:layout_marginStart="16dp"/>
        <RadioGroup
                android:id="@+id/tip_options"
                android:checkedButton="@id/option_twenty_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@id/service_question"
                app:layout_constraintTop_toBottomOf="@id/service_question">
            <RadioButton
                    android:id="@+id/option_twenty_percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amazing"/>
            <RadioButton
                    android:id="@+id/option_eighteen_percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/good"/>
            <RadioButton
                    android:id="@+id/option_fifteen_percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"/>

        </RadioGroup>
        <ImageView
                android:id="@+id/icon_round_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/round_up_switch"
                app:layout_constraintTop_toTopOf="@id/round_up_switch"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/ic_round_up"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/round_up_switch"
                android:checked="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/switch_text"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/icon_round_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tip_options"/>

        <Button
                android:id="@+id/calculate_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/calculate"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/round_up_switch"
                app:layout_constraintStart_toStartOf="@id/round_up_switch"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:id="@+id/tip_result"
                style="@style/Widget.TipTime.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Tip Amount: $10"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/calculate_button"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
